<resources>
    <string name="app_name">Bayarlah</string>
    <string name="tHavent">Have not account ? Register</string>
    <string name="there">here</string>
    <string name="tForget">"Forget password ? Click "</string>
    <string name="bLogin">Login</string>
    <string name="hPass">Password</string>
    <string name="hEmail">Email</string>
    <string name="bSend">Send email</string>
    <string name="bReg">Register</string>
    <string name="hConPas">Confirm Password</string>
    <string name="dev">Created by novika</string>
</resources>